# sigame-macro

./: CMakeLists.txt  LICENSE  README.md  main.cpp
client/: client.cpp  client.h
commandLine/: commandLine.cpp  commandLine.h
error/: error.cpp
result/: result.cpp  result.h
